# task-manager

./: .gitmodules  LICENSE  README.md  stack.yaml  task-manager.cabal
src/: Main.hs  Task.hs  TasksStorage.hs  bot.hs
