name:                task-manager
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/snusmumrik/task-manager#readme
license:             BSD3
license-file:        LICENSE
author:              Andrey Feofilaktov
maintainer:          andarpolis@gmail.com
copyright:           2018 Andrey Feofilaktov
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable task-manager
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
                base >= 4.7 && < 5
              , telegram-bot-simple
              , sqlite-simple
              , text
